--- a/openehr-cnf-tests-java-w-groovy/pom.xml
+++ b/openehr-cnf-tests-java-w-groovy/pom.xml
@@ -28,14 +28,7 @@
 
     <dependency>
        <groupId>io.cucumber</groupId>
-       <artifactId>cucumber-java8</artifactId>
-       <version>4.2.0</version>
-       <scope>test</scope>
-    </dependency>
-
-    <dependency>
-       <groupId>io.cucumber</groupId>
-       <artifactId>cucumber-picocontainer</artifactId>
+       <artifactId>cucumber-groovy</artifactId>
        <version>4.2.0</version>
        <scope>test</scope>
     </dependency>
